[workspace]

members = [
    "wow_message_parser",
    "wow_world_messages",
    "wow_world_base",
    "wow_login_messages",
    "wow_items",
    "wow_spells",
    "examples/*",
]

[workspace.package]
license = "MIT OR Apache-2.0"
edition = "2021"
repository = "https://www.github.com/gtker/wow_messages"
authors = ["Gtker <github@gtker.com"]

[workspace.dependencies]
wow_world_base = { path = "wow_world_base" }
