[package]
name = "wow_login_messages"
description = "Message definitions for World of Warcraft authentication servers"
version = "0.1.0" # Remember to update html_root_url and docs in src/lib.rs, and README.md
license = "MIT OR Apache-2.0"
repository = "https://www.github.com/gtker/wow_messages"
keywords = ["wow", "world-of-warcraft", "login", "messages", "packets"]
categories = ["authentication", "messages", "game-development", "game-engines"]
readme = "README.md"
authors = ["Gtker <github@gtker.com"]
edition = "2018"
