[package]
name = "wow_login_messages"
description = "Message definitions for World of Warcraft authentication servers"
version = "0.1.0" # Remember to update html_root_url and docs in src/lib.rs, and README.md
license = "MIT OR Apache-2.0"
repository = "https://www.github.com/gtker/wow_messages"
keywords = ["wow", "world-of-warcraft", "login", "messages", "packets"]
categories = ["authentication", "network-programming", "game-development", "game-engines"]
readme = "README.md"
authors = ["Gtker <github@gtker.com"]
edition = "2018"

[features]
default = []
async_tokio = ["tokio", "async-trait"]
async_std = ["async-std", "async-trait"]
sync = []

[dependencies.tokio]
version = "1"
default-features = false
features = ["io-util"]
optional = true

[dependencies.async-trait]
version = "0.1"
optional = true

[dependencies.async-std]
version = "1.11"
optional = true
default-features = false
features = ["async-io", "std"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
