[package]
name = "wow_message_parser"
version = "0.0.0"
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
publish = false

[features]
overwrite-tests = []

[dependencies]
pest = "2.0"
pest_derive = "2.0"
walkdir = "2.3.2"
heck = { version = "0.4.0" }
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
flate2 = { version = "1.0.24", features = ["zlib"], default-features = false }
rusqlite = { version = "0.28.0", features = ["bundled"] }
wow_world_base = { workspace = true, features = ["vanilla", "tbc", "wrath"] }
ordered-float = "3.4.0"
hashbrown = "0.13.2"
