[package]
name = "wow_simple_auth"
version = "0.0.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wow_login_messages = { path = "../wow_login_messages" }
wow_srp = { version = "0.4.0", default-features = false, features = ["srp-fast-math"] }
