[package]
name = "wow_spells"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
wow_world_base.workspace = true

[features]
default = []
vanilla = ["wow_world_base/vanilla"]
tbc = ["wow_world_base/tbc"]
wrath = ["wow_world_base/wrath"]
unobtainable-items = []
