[package]
name = "wow_spells"
description = "Spell definitions for World of Warcraft game servers"
version = "0.2.0"
keywords = ["wow", "world-of-warcraft", "spell", "definitions"]
categories = ["network-programming", "game-development", "game-engines"]
exclude = ["release.toml"]

edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
wow_world_base.workspace = true

[features]
default = []
vanilla = ["wow_world_base/vanilla"]
tbc = ["wow_world_base/tbc"]
wrath = ["wow_world_base/wrath"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
