[package]
name = "wow_vanilla_messages"
version = "0.0.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.wow_srp]
version = "0.4.0"

[features]
default = ["async_tokio", "async_std"]
async_tokio = ["tokio", "async-trait"]
async_std = ["async-std", "async-trait"]

[dependencies.tokio]
version = "1"
default-features = false
features = ["io-util"]
optional = true

[dependencies.async-trait]
version = "0.1"
optional = true

[dependencies.async-std]
version = "1.11"
optional = true
features = ["async-io"]
