[package]
name = "wow_vanilla_messages"
version = "0.0.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.wow_srp]
version = "0.4.0"

[features]
default = []
sync = []

[dependencies.tokio]
version = "1"
default-features = false
features = ["io-util"]
optional = true

[dependencies.async-std]
version = "1.11"
default-features = false
optional = true
features = ["async-io"]

[dev-dependencies.async-std]
version = "1.11"
default-features = false
features = ["attributes", "default"]

[dev-dependencies.tokio]
version = "1"
default-features = false
features = ["macros", "rt"]
