[package]
name = "wow_world_messages"
version = "0.0.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.wow_world_base]
path = "../wow_world_base"
default-features = false

[dependencies.wow_srp]
version = "0.5.1"
default-features = false
optional = true

[features]
default = ["encryption"]
sync = []
vanilla = []
tbc = ["wow_srp/tbc-header"]
wrath = ["wow_srp/wrath-header"]
encryption = ["wow_srp"]

[dependencies.chrono]
version = "0.4"
optional = true

[dependencies.flate2]
version = "1.0.24"
optional = false
default-features = false
features = ["zlib"]

[dependencies.tokio]
version = "1"
default-features = false
features = ["io-util"]
optional = true

[dependencies.async-std]
version = "1.11"
default-features = false
optional = true
features = ["async-io"]

[dev-dependencies.async-std]
version = "1.11"
default-features = false
features = ["attributes", "default"]

[dev-dependencies.tokio]
version = "1"
default-features = false
features = ["macros", "rt"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
