[package]
name = "tbc_server"
version = "0.0.0"
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.18.2", features = ["full"] }
wow_login_messages = { path = "../../wow_login_messages", features = ["tokio"] }
wow_world_messages = { path = "../../wow_world_messages", features = ["tokio", "tbc"] }

[dependencies.wow_srp]
git = "https://github.com/gtker/wow_srp.git"
rev = "ba56b4564ec9f7baf6bec824e547e9279a0f58ce"
