[package]
name = "vanilla_client"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
wow_login_messages = { path = "../../wow_login_messages", features = ["sync"] }
wow_world_messages = { path = "../../wow_world_messages", features = ["sync", "vanilla"] }

[dependencies.wow_srp]
git = "https://github.com/gtker/wow_srp.git"
rev = "9c5382a2915850efc69f05d7985ab06b3ec13163"
