[package]
name = "vanilla_client"
version = "0.0.0"
edition = "2021"
publish = false
metadata.release.release = false

[dependencies]
wow_login_messages = { path = "../../wow_login_messages", features = ["sync"] }
wow_world_messages = { path = "../../wow_world_messages", features = ["sync", "vanilla"] }

[dependencies.wow_srp]
version = "0.7.0"
