[package]
name = "simple_server"
version = "0.0.0"
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.18.2", features = ["full"] }
wow_login_messages = { path = "../../wow_login_messages", features = ["tokio"] }
wow_world_messages = { path = "../../wow_world_messages", features = ["tokio", "vanilla"] }

[dependencies.wow_srp]
git = "https://github.com/gtker/wow_srp.git"
rev = "9c5382a2915850efc69f05d7985ab06b3ec13163"
